--- a/styles/index.css
+++ b/styles/index.css
@@ -52,3 +52,15 @@ body {
     margin: 5px auto;
     background: #fff;
 }
+/* Intro sectie */
+.intro {
+    text-align: center;
+    padding: 50px 20px;
+}
+
+.image-section img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 20px auto;
+}
